Add initial migration of all tables

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">SpotyfyApp: Code-First Music System</h1>
+    <a asp-controller="Playlists" asp-action="Index">Playlists</a> |
+    <a asp-controller="Artists" asp-action="Index">Artists</a> |
+    <a asp-controller="Albums" asp-action="Index">Albums</a> |
+    <a asp-controller="Songs" asp-action="Index">Songs</a>
 </div>
