--- a/Views/Albums/Index.cshtml
+++ b/Views/Albums/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<SD_330_F22SD_Assignment_1.Models.Song>
+﻿@model IEnumerable<SD_330_F22SD_Assignment_1.Models.Album>
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Songs</h1>
+<h1>Albums</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -16,12 +16,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DurationSeconds)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Album)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -30,12 +24,6 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DurationSeconds)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Album.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
