--- a/Views/Playlists/Details.cshtml
+++ b/Views/Playlists/Details.cshtml
@@ -11,15 +11,73 @@
     <h4>Playlist</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+        <dt class = "col-sm-6">
+            playlist @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-6">
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
 </div>
+
+<hr />
+
+<table class="table">
+<thead>
+    <tr>
+        <th>Song Title</th>
+        <th>Duration in Seconds</th>
+        <th>Album</th>
+    </tr>
+</thead>
+<tbody>
+    @foreach (var playlistSong in Model.PlaylistSongs)
+    {
+        <tr>
+            <td>@playlistSong.Song.Title</td>
+            <td>@playlistSong.Song.DurationSeconds</td>
+            <td>@playlistSong.Song.Album.Title</td>
+        </tr>
+    }
+</tbody>
+</table>
+
+@*<table class="table">
+    @foreach (PlaylistSong ps in Model.PlaylistSongs)
+    {
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => ps.Song.Title)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => ps.Song.DurationSeconds)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => ps.Song.Album)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.PlaylistSongs)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => ps.Song.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => ps.Song.DurationSeconds)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => ps.Song.Album.Title)
+                    </td>
+                </tr>
+            }
+        </tbody>
+    }
+</table>*@
+
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
