--- a/Views/Songs/Delete.cshtml
+++ b/Views/Songs/Delete.cshtml
@@ -28,7 +28,7 @@
             @Html.DisplayNameFor(model => model.Album)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Album.Id)
+            @Html.DisplayFor(model => model.Album.Title)
         </dd>
     </dl>
     
