Add all new models and their relationships as modelbuiders in SpotifyContext

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">SpotyfyApp: Code-First Music System</h1>
+    <h1 class="display-4">SpotyfyApp: Music App Refactored</h1>
     <a asp-controller="Playlists" asp-action="Index">Playlists</a> |
     <a asp-controller="Artists" asp-action="Index">Artists</a> |
     <a asp-controller="Albums" asp-action="Index">Albums</a> |
