--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,5 +7,8 @@
     <a asp-controller="Playlists" asp-action="Index">Playlists</a> |
     <a asp-controller="Artists" asp-action="Index">Artists</a> |
     <a asp-controller="Albums" asp-action="Index">Albums</a> |
-    <a asp-controller="Songs" asp-action="Index">Songs</a>
+    <a asp-controller="Songs" asp-action="Index">Songs</a> |     
+    <a asp-controller="ListenersLists" asp-action="Index">List of Listeners</a> |
+    <a asp-controller="Podcasts" asp-action="Index">Podcasts</a> |
+    <a asp-controller="Episodes" asp-action="Index">Episodes</a> |
 </div>
