--- a/Views/Podcasts/Index.cshtml
+++ b/Views/Podcasts/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>List of Podcasts</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -16,9 +16,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ListenerslistPodcast)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -27,9 +24,6 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ListenerslistPodcast.ListenersListPodcastId)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.PodcastId">Edit</a> |
